# middleware

./: .env.example  .gitignore  CODEBASE_UNDERSTANDING_GUIDE.md  Dockerfile  README.md  architecture_quick_reference.md  code_cheat_sheet.md  deployment_and_testing_walkthrough.md  docker-compose.yml  frontend_handoff_document.md  frontend_handoff_document_enhanced.md  interactive_architecture_diagram.html  pipeline.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py  static_architecture.html  teams_responses.txt  walkthrough_diagram_pack.md  websocket_tester.html  windows_server_deployment_ps.md
app/: main.py
app/api/: chat_routes.py  deps.py  export_routes.py  health_routes.py  websocket_routes.py
app/clients/: backend_executor_client.py  kafka_consumer.py  token_client.py
app/core/: config.py  exceptions.py  lifespan.py  logging.py  throttler.py
app/db/: mongo.py
app/models/: api_requests.py  api_responses.py  db_models.py  export_models.py  kafka_events.py  websocket_messages.py
app/services/: chat_execution_service.py  event_processing_service.py  metrics_service.py  pdf_export_service.py  session_service.py  status_service.py  websocket_manager.py
app/templates/: execution_report.html
app/utils/: audit_logger.py  business_logic.py  datetime_utils.py  ids.py  retry.py
tests/: conftest.py  test_backend_executor_client.py  test_business_logic.py  test_chat_execute_endpoint.py  test_event_processing_service.py  test_export_service.py  test_hierarchical_timeline.py  test_integrity_integration.py  test_kafka_consumer_migration.py  test_token_client.py  test_websocket_manager.py
(+3 files in other folders)
